--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -289,12 +289,25 @@ a.sign-user {
 
 .card-contact {
   float: center;
-  /*color: white;*/
-  /*background: #333;*/
+  width: 250px;
+  height: 150px;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 15px;
+  font-family: 'playfair display', monospace, serif;
+  color: black;
+  background: white;
+  text-align: center;
+}
+
+/*.card-contact {
+  float: center;
+  color: white;
+  background: #333;
   text-align: center;
   margin: 20px;
   border: #333 solid 1px;
-}
+}*/
 
 /*img {
   width: 30px;
@@ -500,4 +513,113 @@ li {
 
 embed {
   margin-bottom: 50px;
+}
+
+p,
+input,
+textarea,
+label {
+  font-family: 'Poppins',
+    sans-serif;
+}
+
+div.container1 {
+  max-width: 900px auto;
+  margin: 50px;
+  padding: 5%;
+  border-radius: 50px;
+  background-color: rgb(43, 36, 36);
+}
+
+.btn {
+  color: white;
+  background:#333;
+  margin-top: 20px;
+}
+
+input,
+textarea,
+label {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  color: #828282;
+}
+
+input,
+textarea {
+  background-color: transparent;
+  border: 0;
+  border-bottom: 2px solid #828282;
+}
+
+i input[type=submit] {
+  background-color: #545557;
+  padding: 15px 0;
+  color: white;
+  font-size: 18px;
+  border-bottom: none;
+  margin-top: 30px;
+  cursor: pointer;
+  transition: all .3s ease;
+}
+
+input[type=submit]:hover {
+  background: #FFF;
+  color: #1b1c1e;
+}
+
+input,
+textarea {
+  color: white;
+  font-size: 18px;
+  padding: 10px;
+}
+
+input:focus,
+textarea:focus {
+  outline: 1px solid #828282;
+}
+
+a {
+  color: #828282;
+  font-style: italic;
+}
+
+a:hover {
+  color: #fff;
+}
+
+a.contact {
+  color: black;
+}
+
+.card-contact,
+h6 {
+  padding: 10px;
+  margin: 10px;
+  color: #333;
+}
+
+.card-contact,
+h1 {
+  color: white;
+}
+
+form {
+  max-width: 600px;
+  background: #aaa;
+  margin: 20px;
+  padding: 60px;
+  border-radius: 10px;
+}
+
+/*form {
+  margin: 0 auto;
+  text-align: left;
+  padding: 50px 0;
+}*/
+
+i {
+  color: #333;
 }
