--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -540,7 +540,7 @@ div.container1 {
   margin: 50px;
   padding: 5%;
   border-radius: 50px;
-  background-color: rgb(43, 36, 36);
+  background-color: rgb(128,124,123);
 }
 
 .btn {
