--- a/contact.html.twig
+++ b/contact.html.twig
@@ -50,37 +50,15 @@
           </li>
           <li>
             <i class="fa-brands fa-facebook"></i>
-            <a href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE" class="contact">Duquesne Christine artiste peintre</a>
+            <a href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE" class="contact">Duquesne Christine artiste
+              peintre</a>
           </li>
           <li>
             <i class="fa-brands fa-instagram"></i>
-            <a href="https://instagram.com/duquesne_christine_peintre?igshid=YmMyMTA2M2Y="
-              class="contact">duquesne christine peintre</a>
+            <a href="https://instagram.com/duquesne_christine_peintre?igshid=YmMyMTA2M2Y=" class="contact">duquesne
+              christine peintre</a>
           </li>
         </ul>
-        <!--
-        <div class="card-contact">
-          <i class="fas fa-envelope"></i>
-          <h6>E-MAIL</h6>
-          <a href="mailto:duquesne.peintre@gmail.com" class="contact">duquesne.peintre@gmail.com</a>
-        </div>
-        <div class="card-contact">
-          <i class="fa-solid fa-mobile-screen-button"></i>
-          <h6>NUMERO DE TELEPHONE</h6>
-          <a href="tel:+33610488231" class="contact">+336 10 48 82 31</a>
-        </div>
-        <div class="card-contact">
-          <i class="fa-brands fa-facebook"></i>
-          <h6>FACEBOOK</h6>
-          <a href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE" class="contact">DUQUESNE-ARTISTE-PEINTRE</a>
-        </div>
-        <div class="card-contact">
-          <i class="fa-brands fa-instagram"></i>
-          <h6>INSTAGRAM</h6>
-          <a href="https://instagram.com/duquesne_christine_peintre?igshid=YmMyMTA2M2Y="
-            class="contact">DUQUESNE_CHRISTINE_<br>PEINTRE</a>
-        </div>
-      -->
       </div>
       <div class="formulaire">
         <form action="https://formsubmit.co/duquesne.peintre@gmail.com" method="POST">
