--- a/painting.html.twig
+++ b/painting.html.twig
@@ -28,16 +28,17 @@
       </button>
       <div class="navlinks-container">
         <a href="index.html">Accueil</a>
-        <a href="painting.html">Œuvres originales</a>
-        <a href="actu.html">Actu</a>
-        <a href="contact.html">Contact</a>
+        <a href="painting.html.twig">Œuvres originales</a>
+        <a href="actu.html.twig">Actu</a>
+        <a href="contact.html.twig">Contact</a>
       </div>
     </div>
   </nav>
   <h1>Tableaux originaux</h1>
   <div class="container">
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Arturo.jpg" class="card-img-top" alt="...">
+      <img src="assets/image/Arturo.jpg" class="card-img-top" alt="ARTURO. Une tête en arrière, un cri. Bourrage de crâne. 
+      Le cri qui régurgite toutes ces informations dont le cerveau ne veut plus.">
       <div class="card-body">
         <h5 class="card-title">Arturo</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -53,7 +54,9 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Au dessus de tout.jpg" class="card-img-top" alt="...">
+      <img src="assets/image/Au dessus de tout.jpg" class="card-img-top" alt="AU-DESSUS DE TOUT. Le tronc d’un personnage géant dépasse 
+      de la ligne d’horizon. Il perçoit un avenir radieux symbolisé par une ouverture vers la mer, les montagnes, le sigle 
+      « faites l’amour, pas la guerre ». En-dessous de cette ligne : un monde humain et condamné.">
       <div class="card-body">
         <h5 class="card-title">Au-dessus de tout</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -62,7 +65,8 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Dinos.jpg" class="card-img-top" alt="...">
+      <img src="assets/image/Dinos.jpg" class="card-img-top" alt="FINIS. Une rivière au premier plan, 
+      puis des dinosaures qui se dirigent vers les montagnes.">
       <div class="card-body">
         <h5 class="card-title">Finis</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -78,7 +82,8 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Regrets.jpg" class="card-img-top" alt="...">
+      <img src="assets/image/Regrets.jpg" class="card-img-top" alt="REGRETS. Une ville assaillie par des météorites colorées. 
+      Les arbres regardent ce monde exploser. ">
       <div class="card-body">
         <h5 class="card-title">Regrets</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -87,7 +92,9 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Flowers.jpg" class="card-img-top" alt="...">
+      <img src="assets/image/Flowers.jpg" class="card-img-top" alt="FLOWERS. Beaucoup de verticalité créée par les tiges, 
+      les feuilles, les fleurs rouges, rosées et blanchâtres. D’autres fleurs, jaunes verdâtres, 
+      d’autres feuilles jaunes, vertes, et des demi-lunes.">
       <div class="card-body">
         <h5 class="card-title">Flowers</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -103,7 +110,8 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Unis vers.jpg" class="card-img-top" alt="...">
+      <img src="assets/image/Unis vers.jpg" class="card-img-top" alt="UNIS VERS. Des silhouettes mi-humaines mi-végétales, 
+      unies sur un sol lunaire, admirent les planètes. ">
       <div class="card-body">
         <h5 class="card-title">Unis vers</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -112,7 +120,8 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Ouvrir l'oeil.jpg" class="card-img-top" alt="...">
+      <img src="assets/image/Ouvrir l'oeil.jpg" class="card-img-top" alt="OUVRIR L’ŒIL. Un œil géant dans lequel se reflète une civilisation perdue. 
+      L’univers observe.">
       <div class="card-body">
         <h5 class="card-title">Ouvrir l'oeil</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -128,7 +137,8 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/time.jpg" class="card-img-top" alt="...">
+      <img src="assets/image/time.jpg" class="card-img-top" alt="TIME. Une famille observe le temps qui passe symbolisé 
+      encore par les 4 saisons au premier plan. Une grande horloge. Un chemin qui amène vers les grands Sages.">
       <div class="card-body">
         <h5 class="card-title">Time</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -144,7 +154,8 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/La grotte.jpg" class="card-img-top" alt="...">
+      <img src="assets/image/La grotte.jpg" class="card-img-top" alt="LA GROTTE. Des plongeurs au premier plan. Beaucoup de verticalité. 
+      Un pont, une ferme…">
       <div class="card-body">
         <h5 class="card-title">La grotte</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -153,7 +164,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Lotus.jpg" class="card-img-top" alt="...">
+      <img src="assets/image/Lotus.jpg" class="card-img-top" alt="LOTUS. Une fleur de lotus posée au milieu d’un espace aquatique. ">
       <div class="card-body">
         <h5 class="card-title">Lotus</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -162,7 +173,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Love.jpg" class="card-img-top" alt="...">
+      <img src="assets/image/Love.jpg" class="card-img-top" alt="LOVE. Sur fond noir, deux bouteilles amoureuses s’entrelacent.">
       <div class="card-body">
         <h5 class="card-title">Love</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -171,7 +182,8 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Non mais dites!.jpg" class="card-img-top" alt="...">
+      <img src="assets/image/Non mais dites!.jpg" class="card-img-top" alt="NON MAIS DITES ! Méditez. Avec ou sans malice. 
+      Vous pourriez déceler quelques suggestions sexuelles sur cet homme rouge et longiforme adossé à un tronc d’arbre rouge.">
       <div class="card-body">
         <h5 class="card-title">Non mais dites !</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -180,7 +192,8 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Les portes.jpg" class="card-img-top" alt="...">
+      <img src="assets/image/Les portes.jpg" class="card-img-top" alt="LES PORTES. Un espace clos, salle de cinéma délimitée 
+      par une végétation de lianes roses. L’ouverture se fait par le biais d’une projection de porte qui s’ouvre sur une autre porte. ">
       <div class="card-body">
         <h5 class="card-title">Les portes</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -189,7 +202,8 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/La poule.jpg" class="card-img-top" alt="...">
+      <img src="assets/image/La poule.jpg" class="card-img-top" alt="LA POULE. La poule survit dans le peu d’espace que la 
+      ville lui accorde encore. Mais qui restera le dernier ? L’homme ou la poule ?">
       <div class="card-body">
         <h5 class="card-title">La poule</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -198,7 +212,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Le sein.jpg" class="card-img-top" alt="...">
+      <img src="assets/image/Le sein.jpg" class="card-img-top" alt="LE SEIN. Un sein sort d’un tissu fleuri et coloré.">
       <div class="card-body">
         <h5 class="card-title">Le sein</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -214,7 +228,8 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Graciée.jpg" class="card-img-top" alt="...">
+      <img src="assets/image/Graciée.jpg" class="card-img-top" alt="GRACIÉE. Une pintade sauvée à Thanksgiving. 
+      Son plumage rouge flamboyant au premier plan, bien éloigné de la ville grise en arrière-plan.">
       <div class="card-body">
         <h5 class="card-title">Graciée</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -223,7 +238,8 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Eclats.jpg" class="card-img-top" alt="...">
+      <img src="assets/image/Eclats.jpg" class="card-img-top" alt="ÉCLATS. Ce tableau s’appelait « ville engloutie ». 
+      Une ville est assaillie de pointes fluos qui peuvent aussi représenter des feux d’artifice.">
       <div class="card-body">
         <h5 class="card-title">Eclats</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -232,7 +248,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="assets/image/Sidney.jpg" class="card-img-top" alt="...">
+      <img src="assets/image/Sidney.jpg" class="card-img-top" alt="SIDNEY. Un palais de verre. Une aile de verre. L’architecture. ">
       <div class="card-body">
         <h5 class="card-title">Sidney</h5>
         <p class="card-material">Acrylique sur toile</p>
@@ -264,9 +280,9 @@
           href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE"><i class="icon ion-social-facebook"></i></a></div>
       <ul class="list-inline">
         <li class="list-inline-item"><a href="index.html">Accueil</a></li>
-        <li class="list-inline-item"><a href="painting.html">Œuvres originales</a></li>
-        <li class="list-inline-item"><a href="actu.html">Actu</a></li>
-        <li class="list-inline-item"><a href="contact.html">Contact</a></li>
+        <li class="list-inline-item"><a href="painting.html.twig">Œuvres originales</a></li>
+        <li class="list-inline-item"><a href="actu.html.twig">Actu</a></li>
+        <li class="list-inline-item"><a href="contact.html.twig">Contact</a></li>
       </ul>
       <p class="copyright">Copyright 2023 Christine Duquesne - <a
           href="mailto:duquesne.peintre@gmail.com">duquesne.peintre@gmail.com</a> </p>
