--- a/Templates/actu.html.twig
+++ b/Templates/actu.html.twig
@@ -26,9 +26,9 @@
       </button>
       <div class="navlinks-container">
         <a href="index.html">Accueil</a>
-        <a href="painting..twig">Œuvres originales</a>
-        <a href="actu.html.twig">Actu</a>
-        <a href="contact.html.twig">Contact</a>
+        <a href="painting.html">Œuvres originales</a>
+        <a href="actu.html">Actu</a>
+        <a href="contact.html">Contact</a>
       </div>
     </div>
   </nav>
@@ -42,9 +42,9 @@
       <div class="social"><a href="https://instagram.com/duquesne_christine_peintre?igshid=YmMyMTA2M2Y="><i class="icon ion-social-instagram"></i></a><a href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE"><i class="icon ion-social-facebook"></i></a></div>
       <ul class="list-inline">
         <li class="list-inline-item"><a href="index.html">Accueil</a></li>
-        <li class="list-inline-item"><a href="painting.htm.twig">Œuvres originales</a></li>
-        <li class="list-inline-item"><a href="actu.html.twig">Actu</a></li>
-        <li class="list-inline-item"><a href="contact.html.twig">Contact</a></li>
+        <li class="list-inline-item"><a href="painting.htm">Œuvres originales</a></li>
+        <li class="list-inline-item"><a href="actu.html">Actu</a></li>
+        <li class="list-inline-item"><a href="contact.html">Contact</a></li>
       </ul>
       <p class="copyright">Copyright 2023 Christine Duquesne - <a href="mailto:duquesne.peintre@gmail.com">duquesne.peintre@gmail.com</a> </p>
     </footer>
