--- a/templates/actu.html
+++ b/templates/actu.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +13,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
+
 <body>
   <nav>
     <a href="index.html" class="nav-icon" aria-label="visit homepage" aria-current="page">
@@ -26,31 +28,35 @@
       </button>
       <div class="navlinks-container">
         <a href="index.html">Accueil</a>
-        <a href="painting.html">Œuvres originales</a>
-        <a href="actu.html">Actu</a>
-        <a href="contact.html">Contact</a>
+        <a href="tempates/painting.html">Œuvres originales</a>
+        <a href="tempates/actu.html">Actu</a>
+        <a href="tempates/contact.html">Contact</a>
       </div>
     </div>
   </nav>
   <h1>Exposition</h1>
-	<div class="container center">
-		<embed src="assets/pdf/FLYER EXPO BOCAGE.pdf" width="450px" height="680px">
-	</div>
+  <div class="container center">
+    <embed src="assets/pdf/FLYER EXPO BOCAGE.pdf" width="450px" height="680px">
+  </div>
 
   <div class="footer-basic">
     <footer>
-      <div class="social"><a href="https://instagram.com/duquesne_christine_peintre?igshid=YmMyMTA2M2Y="><i class="icon ion-social-instagram"></i></a><a href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE"><i class="icon ion-social-facebook"></i></a></div>
+      <div class="social"><a href="https://instagram.com/duquesne_christine_peintre?igshid=YmMyMTA2M2Y="><i
+            class="icon ion-social-instagram"></i></a><a href="https://www.facebook.com/DUQUESNEARTISTEPEINTRE"><i
+            class="icon ion-social-facebook"></i></a></div>
       <ul class="list-inline">
         <li class="list-inline-item"><a href="index.html">Accueil</a></li>
-        <li class="list-inline-item"><a href="painting.htm">Œuvres originales</a></li>
-        <li class="list-inline-item"><a href="actu.html">Actu</a></li>
-        <li class="list-inline-item"><a href="contact.html">Contact</a></li>
+        <li class="list-inline-item"><a href="tempates/painting.htm">Œuvres originales</a></li>
+        <li class="list-inline-item"><a href="tempates/actu.html">Actu</a></li>
+        <li class="list-inline-item"><a href="tempates/contact.html">Contact</a></li>
       </ul>
-      <p class="copyright">Copyright 2023 Christine Duquesne - <a href="mailto:duquesne.peintre@gmail.com">duquesne.peintre@gmail.com</a> </p>
+      <p class="copyright">Copyright 2023 Christine Duquesne - <a
+          href="mailto:duquesne.peintre@gmail.com">duquesne.peintre@gmail.com</a> </p>
     </footer>
   </div>
-  
+
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/scripts.js"></script>
 </body>
+
 </html>
