--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -399,7 +399,7 @@ h2 {
 .paint {
   height: 600px;
   /*border: #000 solid 3px;*/
-  background-image: url(../image/time.jpg);
+  background-image: url(../image/time2.jpg);
   background-size: cover;
 }
 
