--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -212,6 +212,10 @@ nav {
   .sign-user i {
     width: 20px;
   }
+
+  .main li {
+    font-size: 15px;
+  }
 }
 
 @media (max-width: 500px) {
@@ -513,10 +517,11 @@ a {
 
 li {
   margin: 30px;
+  text-decoration: none;
 }
 
 .main li {
-  font-size: 25px;
+  font-size: 20px;
   /*padding-bottom: 5px;*/
   text-decoration: none;
 }
@@ -603,6 +608,7 @@ a:hover {
 a.contact {
   color: black;
   font-size: 25px;
+  text-decoration: none;
 }
 
 .card-contact,
@@ -624,6 +630,6 @@ i {
   color: #333;
 }
 
-li {
-  text-decoration: none;
+ul {
+  list-style-type: none
 }
